add basic example